--- a/about_me/about_me.css
+++ b/about_me/about_me.css
@@ -29,6 +29,9 @@
   text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.2);
   font-size: 1.6rem;
   font-weight: bold; 
+  -moz-animation: bg_about_me 11s forwards; /* Firefox */
+  -webkit-animation: bg_about_me 11s forwards; /* Safari and Chrome */
+  -o-animation: bg_about_me 11s forwards; /* Opera */
   animation: bg_about_me 11s forwards; 
 }
 
@@ -42,6 +45,9 @@
   position: relative;
   display: inline-block;
   opacity: 0;
+  -moz-animation: waviy 1s 2s both; /* Firefox */
+  -webkit-animation: waviy 1s 2s both; /* Safari and Chrome */
+  -o-animation: waviy 1s 2s both; /* Opera */
   animation: waviy 1s 2s both;
   animation-delay: calc(.1s * var(--i))
 }
@@ -51,15 +57,15 @@
     height: auto;
 }
 .container_text p{
-    margin-top: 1.2rem;
-    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 100%);
-    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 100%);
-    transform: translateY(-50px);
-    opacity: 0;
-    -moz-animation:sectionAnimation 5s  forwards; /* Firefox */
-    -webkit-animation:sectionAnimation 5s  forwards; /* Safari and Chrome */
-    -o-animation:sectionAnimation 5s  forwards; /* Opera */
-    animation:sectionAnimation 5s  forwards;
+  margin-top: 1.2rem;
+  -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 100%);
+  clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 100%);
+  transform: translateY(-50px);
+  opacity: 0;
+  -moz-animation:sectionAnimation 5s  forwards; /* Firefox */
+  -webkit-animation:sectionAnimation 5s  forwards; /* Safari and Chrome */
+  -o-animation:sectionAnimation 5s  forwards; /* Opera */
+  animation:sectionAnimation 5s  forwards;
 }
 .container_text a{
   text-decoration: none; 
@@ -105,10 +111,10 @@
 }
 
 100% {
-  transform: translateY(0);
-  opacity: 1;
- -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 0);
- clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 0);
+    transform: translateY(0);
+    opacity: 1;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 0);
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 0);
   
  }
 }
@@ -117,14 +123,17 @@
 @keyframes waviy {
   0%{
     opacity: 0;
-    transform: translateY(0)
+    transform: translateY(0);
+    -webkit-transform:translateY(0);
   }
   40%,100% {
     opacity: 1;
-    transform: translateY(0)
+    transform: translateY(0);
+    -webkit-transform:translateY(0);
   }
   20% {
-    transform: translateY(-20px)
+    transform: translateY(-20px);
+    -webkit-transform:translateY(-20px);
   }
   
 }
@@ -170,29 +179,37 @@
   }
 }
 
+
+
 /* --------------ROCKET------------------- */
 
 @keyframes flicker {
   0% {
     transform: rotate(-1deg);
+    -webkit-transform:rotate(-1deg);
   }
   20% {
     transform: rotate(3deg) scaleY(1.05);
+    -webkit-transform:rotate(3deg) scaleY(1.05);
   }
   60% {
     transform: rotate(1deg);
+    -webkit-transform:rotate(1deg);
   }
   80% {
     transform: rotate(-1deg) scaleY(0.9);
+    -webkit-transform: rotate(-1deg) scaleY(0.9);
   }
   100% {
     transform: rotate(4deg);
+    -webkit-transform: rotate(4deg);
   }
 }
 
 @keyframes rocket_launch {
   100%{
-    transform: translateY(-1300px) /* rotate(-45deg) */
+    transform: translateY(-1300px);
+    -webkit-transform: translateY(-1300px);
   }
 }
 
@@ -202,7 +219,8 @@
   }
   100%{
     opacity: 0.6;
-    transform: translateY(-1300px)
+    transform: translateY(-1300px);
+    -webkit-transform:translateY(-1300px);
   }
 }
 
@@ -224,7 +242,7 @@
   bottom:.5rem;
   right: 0;
   width: 100px;
-  height: 100px;
+  height: 90px;
 }
 .rocket{
   fill-opacity: 0; /* no se ve el interior, solo el borde que ponemos despues */
@@ -236,12 +254,18 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
+  bottom: 0;
   right: 0;
-  animation: rocket_launch 15s 12.5s infinite ;
+  -moz-animation: rocket_launch 12s 12.5s infinite; /* Firefox */
+  -webkit-animation: rocket_launch 12s 12.5s infinite; /* Safari and Chrome */
+  -o-animation: rocket_launch 12s 12.5s infinite; /* Opera */
+  animation: rocket_launch 12s 12.5s infinite ;
 }
 
 .rocket{
+  -moz-animation: draw 4s 8s linear both; /* Firefox */
+  -webkit-animation: draw 4s 8s linear both; /* Safari and Chrome */
+  -o-animation: draw 4s 8s linear both; /* Opera */
   animation: draw 4s 8s linear both;  
 }
 
@@ -250,7 +274,7 @@
   position: absolute;
   width: 80%;
   height: 80%;
-  top: 0;
+  bottom: 0;
   left:0;
   transition: 4s ease;
   pointer-events: none;
@@ -259,7 +283,10 @@
   position: absolute;
   opacity: 0;
   transition: 250ms ease;
-  animation: flame 15s 12.5s  infinite;
+  -moz-animation: flame 12s 12.5s  infinite; /* Firefox */
+  -webkit-animation: flame 12s 12.5s  infinite; /* Safari and Chrome */
+  -o-animation: flame 12s 12.5s  infinite; /* Opera */
+  animation: flame 12s 12.5s  infinite;
 }
 /* ------------FLAME------------- */
 .flame-wrapper{
@@ -308,6 +335,9 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  -moz-animation: flicker 3ms ease-in infinite; /* Firefox */
+  -webkit-animation: flicker 3ms ease-in infinite; /* Safari and Chrome */
+  -o-animation: flicker 3ms ease-in infinite; /* Opera */
   animation: flicker 3ms ease-in infinite;
 }
 
