--- a/about_me/about_me.css
+++ b/about_me/about_me.css
@@ -69,19 +69,18 @@
 }
 .container_text a{
   text-decoration: none; 
-  color: #ffe221;
+  color: rgb(255, 81, 0);
+  font-weight:bolder;
+  font-size: 1.4rem;
   /* color: rgb(0, 17, 255); */
+  opacity: 0;
+  -moz-animation: appear 3s 8s forwards; /* Firefox */
+  -webkit-animation: appear 3s 8s forwards; /* Safari and Chrome */
+  -o-animation: appear 3s 8s forwards; /* Opera */
+  animation: appear 3s 8s forwards;
 }
 .container_text a:hover{
     color: rgba(129, 141, 163, 0.7);
-}
-
-.glowIn{
- opacity: 0;
- -moz-animation: appear 3s forwards; /* Firefox */
- -webkit-animation: appear 3s forwards; /* Safari and Chrome */
- -o-animation: appear 3s forwards; /* Opera */
- animation: appear 3s forwards;
 }
 
 
