--- a/cerebro/cerebro.css
+++ b/cerebro/cerebro.css
@@ -111,14 +111,11 @@
   height: 70%;
 }
 
-.cerebro_izq{
-  animation: draw_izq 3s 2s linear forwards, brillo_svg 2s 4s infinite;  
-}
 .cerebro_derch{
   animation: draw_derch 3s linear forwards, brillo_svg 2s 4s infinite;  
 }
 .cerebro_abajo{
-  animation: draw_derch 4s linear forwards;
+  animation: draw_neuronas 4s linear forwards;
 }
 
 .cerebro_derch,.cerebro_abajo{
@@ -128,34 +125,19 @@
   stroke-dasharray: 80000;
   /* stroke: rgb(255, 254, 254); */
 }
-.cerebro_izq{
-  fill-opacity: 0; 
-  stroke-width: 18px;
-  stroke-dashoffset: 0;
-  stroke-dasharray: 80000;
-}
+
 .cerebro_neuronas{
   fill-opacity: 0; /* no se ve el interior, solo el borde que ponemos despues */
   stroke-width: 18px;
   stroke-dashoffset: 0;
   stroke-dasharray: 80;
-  animation: draw_derch 5s linear infinite,brillo_svg 2s 8s infinite;
+  animation: draw_neuronas 5s linear infinite, brillo_svg 2s 8s infinite;
 }
 
 
 /* --------------Animations---------------- */
-@keyframes section_zoomIn {
-  from {
-    opacity: 0;
-    -webkit-transform: scale3d(0.3, 0.3, 0.3);
-    transform: scale3d(0.3, 0.3, 0.3);
-  }
 
-  50% {
-    opacity: 1;
-  }
-}
-@keyframes draw_izq {
+@keyframes draw_derch {
   0%{
      fill-opacity: 0; 
       stroke: rgb(255, 254, 254);
@@ -171,7 +153,7 @@
   }
 }
 
-@keyframes draw_derch {
+@keyframes draw_neuronas {
   0%{
       stroke: rgb(255, 254, 254);
       stroke-dashoffset: -80000;
