--- a/inicio_texto.css
+++ b/inicio_texto.css
@@ -38,24 +38,32 @@ h1, h2{
   clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
   transform: translateY(-50px);
   opacity: 0;
-  animation-name: titleAnimation;
-  animation-timing-function:ease;
-  animation-duration: 2.5s;
+  -webkit-animation-name: titleAnimation;
+          animation-name: titleAnimation;
+  -webkit-animation-timing-function:ease;
+          animation-timing-function:ease;
+  -webkit-animation-duration: 2.5s;
+          animation-duration: 2.5s;
 }
 
 .primero span{
-  animation-duration: 2s;
-  animation-delay: 1.6s;
-  animation-fill-mode: forwards;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-delay: 1.6s;
+          animation-delay: 1.6s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .primero span:first-child{
-    animation-delay: 1.7s;
+    -webkit-animation-delay: 1.7s;
+            animation-delay: 1.7s;
 }
 
 .primero span:last-child{
     color:#ffe221;
-    animation-delay: 1.5s;
+    -webkit-animation-delay: 1.5s;
+            animation-delay: 1.5s;
 }
 
 .segundo{ 
@@ -63,21 +71,28 @@ h1, h2{
   position: absolute;
 }  
 .segundo span{
-  animation-duration: 3.8s;
-  animation-delay: 4.1s;
-  animation-fill-mode: forwards;   
+  -webkit-animation-duration: 3.8s;
+          animation-duration: 3.8s;
+  -webkit-animation-delay: 4.1s;
+          animation-delay: 4.1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;   
 }
 .segundo span:first-child{
-  animation-duration: 3.8s;
-  animation-delay: 4.2s;
+  -webkit-animation-duration: 3.8s;
+          animation-duration: 3.8s;
+  -webkit-animation-delay: 4.2s;
+          animation-delay: 4.2s;
 }
 .segundo strong{
   color: #ffe221;
   letter-spacing: 3px;
 }
 .segundo span:last-child{ 
-  animation-duration: 3.8s; 
-  animation-delay: 4.3s;      
+  -webkit-animation-duration: 3.8s; 
+          animation-duration: 3.8s; 
+  -webkit-animation-delay: 4.3s; 
+          animation-delay: 4.3s;      
 }
 
 .tercero{ 
@@ -85,17 +100,51 @@ h1, h2{
     position: absolute;
   }  
   .tercero span{
-      animation-delay: 9.1s;
-      animation-fill-mode: forwards;
+      -webkit-animation-delay: 9.1s;
+              animation-delay: 9.1s;
+      -webkit-animation-fill-mode: forwards;
+              animation-fill-mode: forwards;
   }
   .tercero span:first-child{
-        animation-delay: 9.2s;
+        -webkit-animation-delay: 9.2s;
+                animation-delay: 9.2s;
   }
   
   .tercero span:last-child{
         color: #ffe221;
-        animation-delay: 9s;
+        -webkit-animation-delay: 9s;
+                animation-delay: 9s;
   }
+
+
+
+@-webkit-keyframes titleAnimation {
+    0% {
+      transform: translateY(-50px);
+      opacity: 0;
+      -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+      clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+  }
+  20% {
+      transform: translateY(0);
+      opacity: 1;
+      -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+      clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
+  80% {
+       transform: translateY(0);
+       opacity: 1;
+      -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+      clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
+  100% {
+       transform: translateY(50px);
+       opacity: 0;
+      -webkit-clip-path: polygon(100% 0, 100% -0%, 0 100%, 0 100%);
+      clip-path: polygon(100% 0, 100% -0%, 0 100%, 0 100%);
+    
+  }
+}
 
 
 
@@ -150,36 +199,45 @@ h1, h2{
   /* Adaptacion de Animation */
 
   .primero span{
-    animation-delay: 0.6s;
+    -webkit-animation-delay: 0.6s;
+            animation-delay: 0.6s;
   }
   
   .primero span:first-child{
-      animation-delay: 0.7s;
+      -webkit-animation-delay: 0.7s;
+              animation-delay: 0.7s;
   }
   
   .primero span:last-child{
-      animation-delay: 0.5s;
+      -webkit-animation-delay: 0.5s;
+              animation-delay: 0.5s;
   }
 
   .segundo span{
-      animation-delay: 4.1s;
+      -webkit-animation-delay: 4.1s;
+              animation-delay: 4.1s;
   }
   .segundo span:first-child{
-        animation-delay: 4.2s;
+        -webkit-animation-delay: 4.2s;
+                animation-delay: 4.2s;
   }
 
   .segundo span:last-child{
-        animation-delay: 4s;
+        -webkit-animation-delay: 4s;
+                animation-delay: 4s;
   } 
     .tercero span{
-        animation-delay: 8.1s;
+        -webkit-animation-delay: 8.1s;
+                animation-delay: 8.1s;
     }
     .tercero span:first-child{
-          animation-delay: 8.2s;
+          -webkit-animation-delay: 8.2s;
+                  animation-delay: 8.2s;
     }
     
     .tercero span:last-child{
-          animation-delay: 8s;
+          -webkit-animation-delay: 8s;
+                  animation-delay: 8s;
     }
 }
 
