--- a/svg.css
+++ b/svg.css
@@ -41,23 +41,17 @@
     stroke-dashoffset: 0;
     stroke-dasharray: 80000;
 }
-.sillon_uno{
-    -moz-animation: draw 6s 11s ease-in-out forwards; /* Firefox */
-    -webkit-animation: draw 6s 11s ease-in-out forwards; /* Safari and Chrome */
-    -o-animation: draw 6s 11s ease-in-out forwards; /* Opera */
+.sillon_uno{ /* Firefox */
+    -webkit-animation: draw 6s 11s ease-in-out forwards; /* Safari and Chrome */ /* Opera */
     animation: draw 6s 11s ease-in-out forwards;
 }
-.sillon_dos{
-    -moz-animation: draw 6s 11.5s ease-in-out forwards; /* Firefox */
-    -webkit-animation: draw 6s 11.5s ease-in-out forwards; /* Safari and Chrome */
-    -o-animation: draw 6s 11.5s ease-in-out forwards; /* Opera */
+.sillon_dos{ /* Firefox */
+    -webkit-animation: draw 6s 11.5s ease-in-out forwards; /* Safari and Chrome */ /* Opera */
     animation: draw 6s 11.5s ease-in-out forwards;  
 }
 
-.planta_baja{
-    -moz-animation: draw 4s 13s linear forwards; /* Firefox */
-    -webkit-animation: draw 4s 13s linear forwards; /* Safari and Chrome */
-    -o-animation: draw 4s 13s linear forwards; /* Opera */
+.planta_baja{ /* Firefox */
+    -webkit-animation: draw 4s 13s linear forwards; /* Safari and Chrome */ /* Opera */
     animation: draw 4s 13s linear forwards;  
 }
 /* ---------------------CONTACTO-------------- */
@@ -87,6 +81,16 @@
 
 
 /* --------------Animations---------------- */
+@-webkit-keyframes draw {
+    0%{
+        stroke: rgb(255, 254, 254);
+        stroke-dashoffset: 80000;
+    }
+    100%{
+        stroke: rgb(255, 254, 254);
+        stroke-dashoffset: 0;
+    }
+}
 @keyframes draw {
     0%{
         stroke: rgb(255, 254, 254);
