--- a/window.css
+++ b/window.css
@@ -10,7 +10,8 @@
     border-radius: 33% 40% 60% 20% / 60% 40% 45% 25%;
     box-shadow: inset 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.164),
       inset 0.2rem -0.2rem 0.5rem rgba(0, 0, 0, 0.16);
-    animation:bounceIn 1s 19s forwards, bg_window 20s 19s infinite;
+    -webkit-animation:bounceIn 1s 19s forwards, bg_window 20s 19s infinite;
+            animation:bounceIn 1s 19s forwards, bg_window 20s 19s infinite;
 }
 
 .moon {
@@ -24,7 +25,8 @@
     box-shadow: 0 0 25px rgba(255, 255, 200, 0.8),
       0 0 1px 15px rgba(82, 115, 159, 0.7), 0 0 1px 40px rgba(82, 115, 149, 0.45),
       0 0 1px 90px rgba(82, 115, 149, 0.3), 0 0 1px 160px rgba(92, 115, 149, 0.1);
-    animation: sun 20s 19s infinite;  
+    -webkit-animation: sun 20s 19s infinite;
+            animation: sun 20s 19s infinite;  
   }
 .moon:before {
   position: absolute;
@@ -114,7 +116,8 @@
               490px 110px 0 rgb(123, 220, 255),
               400px 150px 0 rgb(123, 220, 255),
               20px 280px 0 rgb(123, 220, 255);
-  animation-delay: 0.3s;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
   }
 .star3 {
   height: 4.5px;
@@ -138,7 +141,8 @@
               370px 250px 0 rgb(123, 220, 255),
               370px -300px 0 rgb(123, 220, 255),
               200px 310px 0 rgb(123, 220, 255);
-  animation-delay: 0.6s;
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
   }
   .shooting-star {
     position: absolute;
@@ -175,6 +179,18 @@
     }
   }
 
+  @-webkit-keyframes bg_window{
+    0%{
+      background:rgb(0, 14, 54);
+    }
+    40%{
+        background:rgb(123, 220, 255) ;
+    }
+    100%{
+      background:rgb(0, 14, 54);
+    }
+  }
+
   @keyframes bg_window{
     0%{
       background:rgb(0, 14, 54);
@@ -185,6 +201,42 @@
     100%{
       background:rgb(0, 14, 54);
     }
+  }
+
+  @-webkit-keyframes sun {
+      0%{
+        background: #eee;
+        box-shadow: 0 0 25px rgba(255, 255, 200, 0.8),
+        0 0 1px 15px rgba(82, 115, 159, 0.7), 0 0 1px 40px rgba(82, 115, 149, 0.45),
+        0 0 1px 90px rgba(82, 115, 149, 0.3), 0 0 1px 160px rgba(92, 115, 149, 0.1);
+      }
+      10%{
+        background:rgba(251, 251, 159, 0.9) ;
+        box-shadow: 0 0 25px rgba(251, 251, 159, 0.9),
+        0 0 1px 15px rgba(251, 251, 159, 0.9);
+      }
+      25%,35%{
+        background:rgba(251, 251, 159, 0.9) ;
+        box-shadow: 0 0 25px rgba(251, 251, 159, 0.9),
+        0 0 1px 15px rgba(251, 251, 159, 0.8), 0 0 1px 40px rgba(251, 251, 159, 0.3),
+        0 0 1px 90px rgba(251, 251, 159, 0.2), 0 0 1px 160px rgba(251, 251, 159, 0.1); 
+      }
+      60%{
+        background:rgba(251, 251, 159, 0.7) ;
+        box-shadow: 0 0 25px rgba(251, 251, 159, 0.1),
+        0 0 1px 15px rgba(251, 251, 159, 0.1);  
+      }
+      65%{
+        background: #eee;
+        box-shadow: 0 0 25px rgba(255, 255, 200, 0.7),
+        0 0 1px 15px rgba(82, 115, 159, 0.1); 
+      }
+      90%,100%{
+        background: #eee;
+        box-shadow: 0 0 25px rgba(255, 255, 200, 0.8),
+        0 0 1px 15px rgba(82, 115, 159, 0.7), 0 0 1px 40px rgba(82, 115, 149, 0.45),
+        0 0 1px 90px rgba(82, 115, 149, 0.3), 0 0 1px 160px rgba(92, 115, 149, 0.1);  
+      }
   }
 
   @keyframes sun {
@@ -220,6 +272,18 @@
         box-shadow: 0 0 25px rgba(255, 255, 200, 0.8),
         0 0 1px 15px rgba(82, 115, 159, 0.7), 0 0 1px 40px rgba(82, 115, 149, 0.45),
         0 0 1px 90px rgba(82, 115, 149, 0.3), 0 0 1px 160px rgba(92, 115, 149, 0.1);  
+      }
+  }
+
+  @-webkit-keyframes hide {
+      0%{
+        opacity: 1;
+      }
+      35%,80%{
+        opacity: 0;
+      }
+      90%,100%{
+        opacity: 1;
       }
   }
 
