--- a/menu/menu.css
+++ b/menu/menu.css
@@ -73,13 +73,15 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    transform: translateY(-200vh);
-    transition: transform 0.3s;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* para borrar el recuadro azul que aparece por defecto con onclick */
-    -webkit-animation: ballBouncing 2.5s 7s linear forwards;
-            animation: ballBouncing 2.5s 7s linear forwards;
     z-index: 100;
     cursor: pointer;
+    transform: translateY(-200vh);
+    transition: transform 0.3s;
+            -webkit-tap-highlight-color: rgba(0, 0, 0, 0);  /*para borrar el recuadro azul que aparece por defecto con onclick*/
+            
+            -webkit-animation: ballBouncing 2.5s 7s linear forwards;
+            animation: ballBouncing 2.5s 7s linear forwards;
+            -moz-animation:ballBouncing 2.5s 7s linear forwards ;
 }
 .container_menu:hover{
     box-shadow: 0px 0px 0px 3px white;
@@ -94,7 +96,9 @@
     justify-content: space-evenly;
     align-items: center;
     opacity: 0;
-    -webkit-animation: bounceIn .3s 10s linear forwards ;
+    -webkit-animation: bounceIn .3s 10s linear forwards ; /* Safari and Chrome */
+    -moz-animation: bounceIn .3s 10s linear forwards ; /* Firefox */
+         -o-animation: bounceIn .3s 10s linear forwards ; /* Opera */
             animation: bounceIn .3s 10s linear forwards ;
 }
 
@@ -154,8 +158,10 @@
   font-size: 2rem;
 }
 .container_contact.active{
-  -webkit-animation: bounceIn .7s .6s forwards;
-          animation: bounceIn .7s .6s forwards;
+  -webkit-animation:bounceIn .7s .6s forwards ; /* Safari and Chrome */
+  -moz-animation:bounceIn .7s .6s forwards ; /* Firefox */
+       -o-animation:bounceIn .7s .6s forwards ; /* Opera */
+          animation:bounceIn .7s .6s forwards ;
 }
 
 .contact{
@@ -210,7 +216,7 @@
     }
 }
   
-@-webkit-keyframes aparece_circulo {
+/* @-webkit-keyframes aparece_circulo {
     0%{
         transform: translateY(-200%);
         
@@ -254,7 +260,7 @@
     100%{
         transform: translateY(0%);  
     }
-}
+} */
 
 @-webkit-keyframes glow-in {
     from {
@@ -289,49 +295,87 @@
 }
 
 @-webkit-keyframes ballBouncing {
-    0%{
-      transform: translateY(-200vh);
-    }
-    55%{
-      transform: scale(1);
-    }
-    60%{
-      transform: scale(1.3, 0.7);
-    }
-    63%{
-      transform: scale(1);
-    }
-    80%{
-      /* transform: translateY(-45vh); */
-      bottom: 2rem;
-    }
-    100%{
-      transform: translateY(-93vh);
-      bottom: -0.2rem;
-    }
+  0%{
+    transform: translateY(-200vh);
+    -ms-transform: translateY(-200vh);
+    -webkit-transform: translateY(-200vh);
+    -moz-transform: translateY(-200vh);
+    -o-transform: translateY(-200vh);
+}
+  55%{
+    transform: scale(1);
+    -ms-transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+}
+  60%{
+    transform: scale(1.3, 0.7);
+    -ms-transform: scale(1.3, 0.7);
+    -webkit-transform: scale(1.3, 0.7);
+    -moz-transform: scale(1.3, 0.7);
+    -o-transform: scale(1.3, 0.7);
+}
+  63%{
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+}
+  80%{
+    /* transform: translateY(-45vh); */
+    bottom: 2rem;
   }
+  100%{
+    bottom: -0.2rem;
+    -webkit-transform: translateY(-93vh);
+    -ms-transform: translateY(-90vh);
+    -o-transform: translateY(-93vh);
+      transform: translateY(-93vh);
+}
+}
 
 @keyframes ballBouncing {
     0%{
       transform: translateY(-200vh);
-    }
+      -ms-transform: translateY(-200vh);
+      -webkit-transform: translateY(-200vh);
+      -moz-transform: translateY(-200vh);
+      -o-transform: translateY(-200vh);
+}
     55%{
       transform: scale(1);
-    }
+      -ms-transform: scale(1);
+      -webkit-transform: scale(1);
+      -moz-transform: scale(1);
+      -o-transform: scale(1);
+}
     60%{
       transform: scale(1.3, 0.7);
-    }
+      -ms-transform: scale(1.3, 0.7);
+      -webkit-transform: scale(1.3, 0.7);
+      -moz-transform: scale(1.3, 0.7);
+      -o-transform: scale(1.3, 0.7);
+}
     63%{
       transform: scale(1);
-    }
+      -webkit-transform: scale(1);
+      -moz-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+}
     80%{
       /* transform: translateY(-45vh); */
       bottom: 2rem;
     }
     100%{
-      transform: translateY(-93vh);
       bottom: -0.2rem;
-    }
+      -webkit-transform: translateY(-93vh);
+      -ms-transform: translateY(-90vh);
+      -o-transform: translateY(-93vh);
+        transform: translateY(-93vh);
+}
   }
 
   /*-------------- MediaQuery-------------- */
