--- a/skills/skills.css
+++ b/skills/skills.css
@@ -151,18 +151,18 @@
  }
 
 .cerebro_nuevo{
-  stroke-dasharray: 272;
-  stroke-dashoffset: 272;
-  animation: drow_nuevo 10s 2s infinite forwards;
+  stroke-dasharray: 450;
+  stroke-dashoffset: 450;
+  animation: draw 5s 2s linear forwards;
+  -webkit-animation: draw 5s 2s linear forwards;
 }
+
+
+
 
 /* --------------Animations---------------- */
 
-@keyframes drow_nuevo{
-  to{
-    stroke-dashoffset: 0;
-  }
-}
+
 
 @-webkit-keyframes draw_derch {
   0%{
@@ -329,6 +329,15 @@
   .skill{
     width: 155px;
     margin-top: .2rem;
+  }
+
+  .container_svg{
+    width: 100vw;
+    height: auto;
+  }
+  #cerebro_nuevo_svg{
+    width: 92%;
+    height: 92%;
   }
 
 }
