--- a/works/works.css
+++ b/works/works.css
@@ -3,29 +3,39 @@
     padding: 0;
     box-sizing: border-box;
 }
-@import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
+/* @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100&display=swap');
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
+#works {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  font-family: 'Jost', sans-serif;
+  text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.2);
+  /* font-family: 'DM Sans', sans-serif; */
+  background: rgb(67, 173, 243);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-body {
+/* body {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 30px 10px;
   font-family: 'DM Sans', sans-serif;
   background: rgb(67, 173, 243);
-  }
+  } */
 
 .container {
+  font-family: 'DM Sans', sans-serif;
   padding: 1rem;
     height: 800px;
     margin: 0;
@@ -168,12 +178,16 @@ body {
   line-height: 24px;
   word-spacing: 2px;
   text-transform: uppercase;
+  letter-spacing: 3px;
+  text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.2);
 }
 
 .sub-line {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  letter-spacing: 1.5px;
+  text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.2);
 }
 
 .subtitle, .time {
@@ -214,4 +228,14 @@ body {
 }
 #item-5:checked ~ .player #test  {
   transform: translateY(-160px);
+}
+
+/* --------------@Media------------- */
+
+@media only screen and (max-width:450px){
+  .container {
+      height: 700px;
+      grid-template-rows: 500px 50px 150px;
+      grid-template-columns: 1fr 30px 30px 30px 30px 30px 1fr;
+    }
 }
