--- a/works/works.css
+++ b/works/works.css
@@ -1,9 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-/* @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap"); */
+
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@100&display=swap');
 
 * {
@@ -20,21 +15,18 @@
   text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.2);
   /* font-family: 'DM Sans', sans-serif; */
   background: rgb(67, 173, 243);
+}
+.wrapper_works{
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 30px 10px;
-  font-family: 'DM Sans', sans-serif;
-  background: rgb(67, 173, 243);
-  } */
 
-.container {
+.container_works {
+/*   background: #e9ff70; */
   font-family: 'DM Sans', sans-serif;
   padding: 1rem;
     height: 800px;
@@ -44,7 +36,8 @@
     grid-template-columns: 1fr 30px 30px 30px 30px 30px 1fr;
     align-items: center;
     justify-items: center;
-  }
+}
+
 /*  */
   main#carousel {
     grid-row: 1 / 2;
@@ -233,7 +226,7 @@
 /* --------------@Media------------- */
 
 @media only screen and (max-width:450px){
-  .container {
+  .container_works {
       height: 700px;
       grid-template-rows: 500px 50px 150px;
       grid-template-columns: 1fr 30px 30px 30px 30px 30px 1fr;
